charts/tests/vc-envoy-tls.yaml
# this will run the validation controller without TLS
# but will add envoy as a TLS terminator as a side car

waas-validationcontroller:
  enabled: true
  containers:
    validationcontroller:
      version: /tls-part-2:latest
  tls:
    server:
      enabled: false
  serviceTargetPort: terminator-port
  extraContainers:
    - name: envoy
      image: envoyproxy/envoy:v1.20.0
      command: ["/usr/local/bin/envoy", "-c", "/etc/terminator-config/config.yaml"]
      volumeMounts:
        - name: envoy-config-file
          mountPath: /etc/terminator-config
        - name: validation-controller-server-volume
          mountPath: /etc/validation-controller/server
        - name: ca-volume
          mountPath: /etc/validation-controller/ca
      ports:
      - containerPort: 10000
        name: terminator-port
  extraVolumes:
    - name: envoy-config-file
      downwardAPI:
        items:
          - path: "config.yaml"
            fieldRef:
              fieldPath: metadata.annotations['envoy.conf.file']
    - name: validation-controller-server-volume
      secret:
        secretName: waas-validation-controller-server-secret
    - name: ca-volume
      configMap:
        name: waas-ca-config
  extraAnnotations:
    envoy.conf.file: |-
      static_resources:
        listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: cluster1
            transport_socket:
              name: envoy.transport_sockets.tls
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                common_tls_context:
                  tls_certificates:
                  - certificate_chain: {filename: "/etc/validation-controller/server/tls.crt"}
                    private_key: {filename: "/etc/validation-controller/server/tls.key"}
                  validation_context:
                    trusted_ca:
                      filename: /etc/validation-controller/ca/ca.crt
        clusters:
        - name: cluster1
          type: STATIC
          dns_lookup_family: V4_ONLY
          load_assignment:
            cluster_name: cluster1
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4443
      admin:
        access_log_path: "/dev/null"
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 19000
